@@ -1,3 +1,6 @@
+Tue Dec 19 17:30:00 GMT 2000 peter@retep.org.uk
+	- Finally created ant build.xml file
+
 Mon Nov 20 08:12:00 GMT 2000 peter@retep.org.uk
 	- Encoding patch to Connection by wrobell@posexperts.com.pl
 
